@@ -1,3 +1,8 @@
+2006-02-14 11:55 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridCollapseWedgeCells) renamed from
+	gridCollapseSlivers.
+
 2006-02-13 19:45 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) added a
